# wifi-sensing-based-elderly-care-monitoring-system

./: .env.template  .gitignore  CLAUDE.md  PROJECT-DETAIL.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cog-ha-matter-release.yml  pip-release.yml  security-scan.yml
alerts/: __init__.py  alert_manager.py  daily_summary.py  i18n.py
configs/: alerts.yaml  models.yaml  thresholds.yaml  zones.yaml
configs/locales/: en.yaml  vi.yaml
dashboard/backend/: auth.py  main.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/public/: index.html
dashboard/frontend/src/: App.js
data/evaluation/: report.json
data/mock/sleep/: sleep_epochs_train.npz  sleep_epochs_val.npz
docker/: Dockerfile  Dockerfile.dashboard  docker-compose.yml  mosquitto.conf
docs/: architecture.md  installation.md  user_guide.md
docs/superpowers/plans/: 2026-05-25-phase2-integration.md
docs/superpowers/specs/: 2026-05-25-phase2-integration-design.md
firmware/esp32-csi-node/main/: csi_collector.c  main.c
firmware/esp32-csi-node/release_bins/: version.txt
firmware/esp32-csi-node/release_bins/c6-adr110/: SHA256SUMS.txt
firmware/esp32-csi-node/release_bins/s3-adr110/: SHA256SUMS.txt
firmware/esp32_csi/: csi_simulator.py  firmware_spec.py
ingestion/: __init__.py  receiver.py  udp_mqtt_bridge.py
models/: __init__.py  calibration.py
models/activity/: __init__.py  detector.py
models/fall_detection/: __init__.py  model.py
models/sleep/: __init__.py  model.py
models/vital_signs/: __init__.py  estimator.py  python_fallback.py
pipeline/: __init__.py  adaptive_thresholds.py  correlation.py  csi_quality.py  data_store.py  degradation.py  evaluate.py  homeassistant.py  inference_engine.py  influx_writer.py  model_registry.py  multi_person.py  performance_tracker.py  persistence.py  preprocessor.py  quantization.py  record_replay.py  shadow_mode.py  telemetry.py  watchdog.py
tests/: __init__.py  test_activity.py  test_alerts.py  test_daily_summary.py  test_dataset_mappers.py  test_docker_e2e.py  test_fall_detection.py  test_ingestion.py  test_integration.py  test_preprocessor.py  test_simulator.py  test_udp_bridge.py  test_vital_signs.py
training/: __init__.py  annotator.py  dataset.py  mock_data.py  train_fall_detection.py  train_sleep.py
training/dataset_mappers/: __init__.py  csibench.py
v2/crates/cog-ha-matter/: Cargo.toml
v2/crates/cog-pose-estimation/src/: inference.rs  main.rs
v2/crates/cog-pose-estimation/tests/: smoke.rs
v2/crates/wifi-densepose-cli/src/: lib.rs
v2/crates/wifi-densepose-core/src/: lib.rs  traits.rs  types.rs
v2/crates/wifi-densepose-desktop/ui/: package-lock.json  package.json
v2/crates/wifi-densepose-mat/src/detection/: ensemble.rs
v2/crates/wifi-densepose-mat/src/domain/: triage.rs
v2/crates/wifi-densepose-ruvector/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: bearer_auth.rs  csi.rs  field_bridge.rs  main.rs
v2/crates/wifi-densepose-signal/src/: lib.rs
v2/crates/wifi-densepose-train/src/: lib.rs
(+6 files in other folders)
