[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eldercare"
version = "0.1.0"
description = "WiFi CSI-based elderly monitoring system — fall detection, vital signs, sleep monitoring, and activity tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ElderCare Development Team"}
]
keywords = [
    "wifi",
    "csi",
    "elderly-care",
    "fall-detection",
    "vital-signs",
    "sleep-monitoring",
    "iot",
    "wireless-sensing",
    "machine-learning",
    "esp32"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Home Automation",
]
requires-python = ">=3.9"
dependencies = [
    # WiFi sensing core (RuView Rust bindings)
    "wifi-densepose>=2.0.0a1",

    # Deep learning
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",

    # API server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # MQTT ingestion
    "paho-mqtt>=1.6.0",

    # Alerting
    "python-telegram-bot>=20.0",

    # Time-series database
    "influxdb-client>=1.38.0",

    # Utilities
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Logging and monitoring
    "structlog>=23.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

gpu = [
    "torch>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/dungnotnull/WiFi-Sensing-Based-Elderly-Care-Monitoring-System"
Repository = "https://github.com/dungnotnull/WiFi-Sensing-Based-Elderly-Care-Monitoring-System.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "pipeline*", "models*", "alerts*", "configs*"]
exclude = ["tests*", "docs*", "data*", "training*", "dashboard*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "torch.*",
    "paho.mqtt.*",
    "wifi_densepose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "-v"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
